[package]
name = "rslocal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
config = "0.13.1"
tonic = "0.7.1"
prost = "0.10"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
tokio-util = "0.7.1"
http = "0.2"
httparse = "1.7.0"
httpdate = "1.0.2"
h2 = "0.3"
chrono = "0.4.19"
getrandom = "0.2.6"
lazy_static = "1.4.0"
parking_lot = "0.12.0"
bytes = "1.1.0"
rand = "0.8.5"
anyhow = { version = "1.0.56", features = ["backtrace"] }
thiserror = { version = "1.0.30" }

[build-dependencies]
tonic-build = "0.7"