[package]
name = "rslocal"
version = "0.1.0"
description = "A tunnel to localhost built in Rust"
repository = "https://github.com/saltbo/rslocal"
license = "Apache-2.0"
authors = ["Ambor <saltbo@foxmail.com>"]
keywords = ["tunnel", "ngrok", "frp"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
config = "0.13.1"
xdg = "2.4.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.8"
tokio-util = "0.7.1"
async-stream = "0.2"
hyper = "0.14.18"
http = "0.2"
httparse = "1.7.0"
tonic = "0.7.1"
prost = "0.10"
prost-types = "0.10"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = "0.3.21"
futures-core = "0.3"
parking_lot = "0.12.0"
anyhow = { version = "1.0.56", features = ["backtrace"] }
thiserror = { version = "1.0.30" }
log = "0.4.16"
rand = "0.8.5"
env_logger = "0.9.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0"
url = "2.2.2"
dashmap = "5.3.3"
inquire = "0.2.1"

[build-dependencies]
tonic-build = { version = "0.7.1", features = ["prost"] }